make footer fixed on mobile, relative on desktop

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,8 +268,16 @@ div#xcd3248 a {
 
 
 @media (min-width: 992px) {
+  body {
+    padding-bottom: 0;
+  }
+
   .nav-item {
     width: 16.6%;
+  }
+
+  footer.footer {
+    position: relative;
   }
 
   #mainNav .container-fluid .navbar-nav .nav-item .nav-link:hover {
